task3/trinary/bin/y.output
   0  $accept : s $end

   1  s : global

   2  global : procedures procMain
   3         | procMain

   4  procedures : procedures proc
   5             | proc

   6  proc : procValue
   7       | procVoid

   8  procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements

   9  procVoid : procIDVoid LEFTPAREN params RIGHTPAREN block_return_void_statements

  10  procValue : procIDValue LEFTPAREN params RIGHTPAREN block_return_value_statements

  11  procIDValue : varType id

  12  procIDVoid : void id

  13  params :
  14         | paramsDeclare

  15  paramsDeclare : param COMMA paramsDeclare
  16                | param

  17  param : varType id

  18  operator : operator PLUS operator
  19           | operator MINUS operator
  20           | operator MULTI operator
  21           | operator DIVISION operator
  22           | Pexpr PLUS Pexpr
  23           | Pexpr MINUS Pexpr
  24           | Pexpr MULTI Pexpr
  25           | Pexpr DIVISION Pexpr
  26           | operator PLUS Pexpr
  27           | operator MINUS Pexpr
  28           | operator MULTI Pexpr
  29           | operator DIVISION Pexpr
  30           | Pexpr PLUS operator
  31           | Pexpr MINUS operator
  32           | Pexpr MULTI operator
  33           | Pexpr DIVISION operator
  34           | address
  35           | derefID
  36           | consts

  37  compBoolExpr : operator
  38               | operator EQUAL operator
  39               | operator GREATER operator
  40               | operator GREATEREQUAL operator
  41               | operator LESS operator
  42               | operator LESSEQUAL operator
  43               | operator NOTEQUAL operator

  44  expr : Pexpr
  45       | expr AND expr
  46       | expr OR expr
  47       | NOT expr
  48       | compBoolExpr

  49  Pexpr : LEFTPAREN expr rightParen

  50  rightParen : RIGHTPAREN

  51  block_return_value_statements : LEFTBRACE newline return SEMICOLON rightbrace
  52                                | LEFTBRACE return SEMICOLON rightbrace

  53  block_return_void_statements : emptyBlock
  54                               | LEFTBRACE newline RETURN SEMICOLON rightbrace
  55                               | LEFTBRACE newline rightbrace

  56  return : RETURN expr
  57         | RETURN

  58  emptyBlock : LEFTBRACE rightbrace
  59             | LEFTBRACE RETURN SEMICOLON rightbrace

  60  rightbrace : RIGHTBRACE

  61  consts : id
  62         | numbers
  63         | booleans
  64         | csnull
  65         | strings
  66         | chars
  67         | procCall
  68         | absolute
  69         | stringArray

  70  absolute : ABSOLUTE id ABSOLUTE

  71  id : ID

  72  numbers : INTEGER_NEG
  73          | INTEGER_POS
  74          | HEX_CONST
  75          | OCTAL_CONST
  76          | BINARY_CONST

  77  csnull : CSNULL

  78  booleans : BOOLTRUE
  79           | BOOLFALSE

  80  strings : STRING_CONST

  81  chars : CHAR_CONST

  82  procCall : id LEFTPAREN args RIGHTPAREN
  83           | id LEFTPAREN RIGHTPAREN

  84  args : argsDeclare

  85  argsDeclare : expr COMMA argsDeclare
  86              | expr

  87  stringArray : id LEFTBRACKET numbers RIGHTBRACKET
  88              | id LEFTBRACKET id RIGHTBRACKET

  89  address : ADDRESS id

  90  derefID : DEREFERENCE id

  91  newline : declarations newline
  92          | SEMICOLON
  93          | statements
  94          | declarations

  95  declarations : variable_declare_statements SEMICOLON

  96  statements : statement statements
  97             | statement
  98             | block_statements statements
  99             | block_statements

 100  statement : IF_statements
 101            | LOOP_statements
 102            | proc
 103            | procCall SEMICOLON
 104            | ASSIGNMENT_statement SEMICOLON

 105  statements_type : statement
 106                  | block_statements

 107  block_statements : emptyBlock
 108                   | LEFTBRACE newline rightbrace

 109  IF_statements : IF cond statements_type
 110                | IF cond statements_type else

 111  else : ELSE statements_type

 112  LOOP_statements : while
 113                  | whileDO
 114                  | for

 115  while : WHILE cond statements_type

 116  whileDO : DO statements_type WHILE cond

 117  for : FOR for_cond rightParen statements_type

 118  for_cond : LEFTPAREN preCondition SEMICOLON postCondition SEMICOLON iteration

 119  preCondition :
 120               | ASSIGNMENT_statement

 121  postCondition :
 122                | expr

 123  iteration :
 124            | ASSIGNMENT_statement

 125  cond : LEFTPAREN expr rightParen

 126  ASSIGNMENT_statement : id ASSIGNMENT expr
 127                       | derefID ASSIGNMENT expr

 128  str_ASSIGNMENT_statement : id LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings

 129  varType : BOOL
 130          | CHAR
 131          | INT
 132          | STRING
 133          | INTPTR
 134          | CHARPTR

 135  void : VOID

 136  StringDeclare : id LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare
 137                | str_ASSIGNMENT_statement COMMA StringDeclare
 138                | id LEFTBRACKET numbers RIGHTBRACKET
 139                | str_ASSIGNMENT_statement

 140  variablesDeclare : id COMMA variablesDeclare
 141                   | ASSIGNMENT_statement COMMA variablesDeclare
 142                   | id
 143                   | ASSIGNMENT_statement

 144  variable_declare_statements : varType variablesDeclare
 145                              | varType StringDeclare

state 0
	$accept : . s $end  (0)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	VOID  shift 7
	.  error

	s  goto 8
	global  goto 9
	procedures  goto 10
	procMain  goto 11
	proc  goto 12
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	void  goto 18


state 1
	varType : BOOL .  (129)

	.  reduce 129


state 2
	varType : CHAR .  (130)

	.  reduce 130


state 3
	varType : INT .  (131)

	.  reduce 131


state 4
	varType : STRING .  (132)

	.  reduce 132


state 5
	varType : INTPTR .  (133)

	.  reduce 133


state 6
	varType : CHARPTR .  (134)

	.  reduce 134


state 7
	procMain : VOID . MAIN LEFTPAREN RIGHTPAREN block_return_void_statements  (8)
	void : VOID .  (135)

	MAIN  shift 19
	ID  reduce 135


state 8
	$accept : s . $end  (0)

	$end  accept


state 9
	s : global .  (1)

	.  reduce 1


state 10
	global : procedures . procMain  (2)
	procedures : procedures . proc  (4)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	VOID  shift 7
	.  error

	procMain  goto 20
	proc  goto 21
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	void  goto 18


state 11
	global : procMain .  (3)

	.  reduce 3


state 12
	procedures : proc .  (5)

	.  reduce 5


state 13
	proc : procValue .  (6)

	.  reduce 6


state 14
	proc : procVoid .  (7)

	.  reduce 7


state 15
	procVoid : procIDVoid . LEFTPAREN params RIGHTPAREN block_return_void_statements  (9)

	LEFTPAREN  shift 22
	.  error


state 16
	procValue : procIDValue . LEFTPAREN params RIGHTPAREN block_return_value_statements  (10)

	LEFTPAREN  shift 23
	.  error


state 17
	procIDValue : varType . id  (11)

	ID  shift 24
	.  error

	id  goto 25


state 18
	procIDVoid : void . id  (12)

	ID  shift 24
	.  error

	id  goto 26


state 19
	procMain : VOID MAIN . LEFTPAREN RIGHTPAREN block_return_void_statements  (8)

	LEFTPAREN  shift 27
	.  error


state 20
	global : procedures procMain .  (2)

	.  reduce 2


state 21
	procedures : procedures proc .  (4)

	.  reduce 4


state 22
	procVoid : procIDVoid LEFTPAREN . params RIGHTPAREN block_return_void_statements  (9)
	params : .  (13)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	RIGHTPAREN  reduce 13

	params  goto 28
	varType  goto 29
	paramsDeclare  goto 30
	param  goto 31


state 23
	procValue : procIDValue LEFTPAREN . params RIGHTPAREN block_return_value_statements  (10)
	params : .  (13)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	RIGHTPAREN  reduce 13

	params  goto 32
	varType  goto 29
	paramsDeclare  goto 30
	param  goto 31


state 24
	id : ID .  (71)

	.  reduce 71


state 25
	procIDValue : varType id .  (11)

	.  reduce 11


state 26
	procIDVoid : void id .  (12)

	.  reduce 12


state 27
	procMain : VOID MAIN LEFTPAREN . RIGHTPAREN block_return_void_statements  (8)

	RIGHTPAREN  shift 33
	.  error


state 28
	procVoid : procIDVoid LEFTPAREN params . RIGHTPAREN block_return_void_statements  (9)

	RIGHTPAREN  shift 34
	.  error


state 29
	param : varType . id  (17)

	ID  shift 24
	.  error

	id  goto 35


state 30
	params : paramsDeclare .  (14)

	.  reduce 14


state 31
	paramsDeclare : param . COMMA paramsDeclare  (15)
	paramsDeclare : param .  (16)

	COMMA  shift 36
	RIGHTPAREN  reduce 16


state 32
	procValue : procIDValue LEFTPAREN params . RIGHTPAREN block_return_value_statements  (10)

	RIGHTPAREN  shift 37
	.  error


state 33
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN . block_return_void_statements  (8)

	LEFTBRACE  shift 38
	.  error

	block_return_void_statements  goto 39
	emptyBlock  goto 40


state 34
	procVoid : procIDVoid LEFTPAREN params RIGHTPAREN . block_return_void_statements  (9)

	LEFTBRACE  shift 38
	.  error

	block_return_void_statements  goto 41
	emptyBlock  goto 40


state 35
	param : varType id .  (17)

	.  reduce 17


state 36
	paramsDeclare : param COMMA . paramsDeclare  (15)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	.  error

	varType  goto 29
	paramsDeclare  goto 42
	param  goto 31


state 37
	procValue : procIDValue LEFTPAREN params RIGHTPAREN . block_return_value_statements  (10)

	LEFTBRACE  shift 43
	.  error

	block_return_value_statements  goto 44


state 38
	block_return_void_statements : LEFTBRACE . newline RETURN SEMICOLON rightbrace  (54)
	block_return_void_statements : LEFTBRACE . newline rightbrace  (55)
	emptyBlock : LEFTBRACE . rightbrace  (58)
	emptyBlock : LEFTBRACE . RETURN SEMICOLON rightbrace  (59)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 50
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RIGHTBRACE  shift 54
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 59
	rightbrace  goto 60
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 39
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements .  (8)

	.  reduce 8


state 40
	block_return_void_statements : emptyBlock .  (53)

	.  reduce 53


state 41
	procVoid : procIDVoid LEFTPAREN params RIGHTPAREN block_return_void_statements .  (9)

	.  reduce 9


state 42
	paramsDeclare : param COMMA paramsDeclare .  (15)

	.  reduce 15


state 43
	block_return_value_statements : LEFTBRACE . newline return SEMICOLON rightbrace  (51)
	block_return_value_statements : LEFTBRACE . return SEMICOLON rightbrace  (52)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 74
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 75
	return  goto 76
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 44
	procValue : procIDValue LEFTPAREN params RIGHTPAREN block_return_value_statements .  (10)

	.  reduce 10


state 45
	void : VOID .  (135)

	.  reduce 135


state 46
	IF_statements : IF . cond statements_type  (109)
	IF_statements : IF . cond statements_type else  (110)

	LEFTPAREN  shift 77
	.  error

	cond  goto 78


state 47
	while : WHILE . cond statements_type  (115)

	LEFTPAREN  shift 77
	.  error

	cond  goto 79


state 48
	for : FOR . for_cond rightParen statements_type  (117)

	LEFTPAREN  shift 80
	.  error

	for_cond  goto 81


state 49
	whileDO : DO . statements_type WHILE cond  (116)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 84
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 50
	emptyBlock : LEFTBRACE RETURN . SEMICOLON rightbrace  (59)

	SEMICOLON  shift 85
	.  error


state 51
	derefID : DEREFERENCE . id  (90)

	ID  shift 24
	.  error

	id  goto 86


state 52
	newline : SEMICOLON .  (92)

	.  reduce 92


state 53
	emptyBlock : LEFTBRACE . rightbrace  (58)
	emptyBlock : LEFTBRACE . RETURN SEMICOLON rightbrace  (59)
	block_statements : LEFTBRACE . newline rightbrace  (108)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	RETURN  shift 50
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RIGHTBRACE  shift 54
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 87
	rightbrace  goto 60
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 54
	rightbrace : RIGHTBRACE .  (60)

	.  reduce 60


state 55
	statement : proc .  (102)

	.  reduce 102


state 56
	procIDValue : varType . id  (11)
	variable_declare_statements : varType . variablesDeclare  (144)
	variable_declare_statements : varType . StringDeclare  (145)

	ID  shift 24
	DEREFERENCE  shift 51
	.  error

	id  goto 88
	derefID  goto 58
	ASSIGNMENT_statement  goto 89
	str_ASSIGNMENT_statement  goto 90
	StringDeclare  goto 91
	variablesDeclare  goto 92


state 57
	procCall : id . LEFTPAREN args RIGHTPAREN  (82)
	procCall : id . LEFTPAREN RIGHTPAREN  (83)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (126)

	ASSIGNMENT  shift 93
	LEFTPAREN  shift 94
	.  error


state 58
	ASSIGNMENT_statement : derefID . ASSIGNMENT expr  (127)

	ASSIGNMENT  shift 95
	.  error


state 59
	block_return_void_statements : LEFTBRACE newline . RETURN SEMICOLON rightbrace  (54)
	block_return_void_statements : LEFTBRACE newline . rightbrace  (55)

	RETURN  shift 96
	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 97


state 60
	emptyBlock : LEFTBRACE rightbrace .  (58)

	.  reduce 58


state 61
	block_statements : emptyBlock .  (107)

	.  reduce 107


state 62
	statement : procCall . SEMICOLON  (103)

	SEMICOLON  shift 98
	.  error


state 63
	newline : declarations . newline  (91)
	newline : declarations .  (94)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	SEMICOLON  shift 52
	LEFTBRACE  shift 53
	RETURN  reduce 94
	RIGHTBRACE  reduce 94

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 56
	id  goto 57
	void  goto 18
	derefID  goto 58
	newline  goto 99
	emptyBlock  goto 61
	procCall  goto 62
	declarations  goto 63
	statements  goto 64
	variable_declare_statements  goto 65
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 64
	newline : statements .  (93)

	.  reduce 93


state 65
	declarations : variable_declare_statements . SEMICOLON  (95)

	SEMICOLON  shift 100
	.  error


state 66
	statements : statement . statements  (96)
	statements : statement .  (97)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	RETURN  reduce 97
	RIGHTBRACE  reduce 97

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statements  goto 101
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 67
	statements : block_statements . statements  (98)
	statements : block_statements .  (99)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	RETURN  reduce 99
	RIGHTBRACE  reduce 99

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statements  goto 102
	statement  goto 66
	block_statements  goto 67
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 68
	statement : IF_statements .  (100)

	.  reduce 100


state 69
	statement : LOOP_statements .  (101)

	.  reduce 101


state 70
	statement : ASSIGNMENT_statement . SEMICOLON  (104)

	SEMICOLON  shift 103
	.  error


state 71
	LOOP_statements : while .  (112)

	.  reduce 112


state 72
	LOOP_statements : whileDO .  (113)

	.  reduce 113


state 73
	LOOP_statements : for .  (114)

	.  reduce 114


state 74
	return : RETURN . expr  (56)
	return : RETURN .  (57)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	SEMICOLON  reduce 57

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 125
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 75
	block_return_value_statements : LEFTBRACE newline . return SEMICOLON rightbrace  (51)

	RETURN  shift 74
	.  error

	return  goto 134


state 76
	block_return_value_statements : LEFTBRACE return . SEMICOLON rightbrace  (52)

	SEMICOLON  shift 135
	.  error


state 77
	cond : LEFTPAREN . expr rightParen  (125)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 136
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 78
	IF_statements : IF cond . statements_type  (109)
	IF_statements : IF cond . statements_type else  (110)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 137
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 79
	while : WHILE cond . statements_type  (115)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 4
	INTPTR  shift 5
	CHARPTR  shift 6
	ID  shift 24
	VOID  shift 45
	IF  shift 46
	WHILE  shift 47
	FOR  shift 48
	DO  shift 49
	DEREFERENCE  shift 51
	LEFTBRACE  shift 53
	.  error

	proc  goto 55
	procValue  goto 13
	procVoid  goto 14
	procIDVoid  goto 15
	procIDValue  goto 16
	varType  goto 17
	id  goto 57
	void  goto 18
	derefID  goto 58
	emptyBlock  goto 61
	procCall  goto 62
	statement  goto 82
	block_statements  goto 83
	IF_statements  goto 68
	LOOP_statements  goto 69
	ASSIGNMENT_statement  goto 70
	statements_type  goto 138
	while  goto 71
	whileDO  goto 72
	for  goto 73


state 80
	for_cond : LEFTPAREN . preCondition SEMICOLON postCondition SEMICOLON iteration  (118)
	preCondition : .  (119)

	ID  shift 24
	DEREFERENCE  shift 51
	SEMICOLON  reduce 119

	id  goto 139
	derefID  goto 58
	ASSIGNMENT_statement  goto 140
	preCondition  goto 141


state 81
	for : FOR for_cond . rightParen statements_type  (117)

	RIGHTPAREN  shift 142
	.  error

	rightParen  goto 143


state 82
	statements_type : statement .  (105)

	.  reduce 105


state 83
	statements_type : block_statements .  (106)

	.  reduce 106


state 84
	whileDO : DO statements_type . WHILE cond  (116)

	WHILE  shift 144
	.  error


state 85
	emptyBlock : LEFTBRACE RETURN SEMICOLON . rightbrace  (59)

	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 145


state 86
	derefID : DEREFERENCE id .  (90)

	.  reduce 90


state 87
	block_statements : LEFTBRACE newline . rightbrace  (108)

	RIGHTBRACE  shift 54
	.  error

	rightbrace  goto 146


state 88
	procIDValue : varType id .  (11)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (126)
	str_ASSIGNMENT_statement : id . LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings  (128)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare  (136)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET  (138)
	variablesDeclare : id . COMMA variablesDeclare  (140)
	variablesDeclare : id .  (142)

	ASSIGNMENT  shift 93
	COMMA  shift 147
	LEFTBRACKET  shift 148
	SEMICOLON  reduce 142
	LEFTPAREN  reduce 11


state 89
	variablesDeclare : ASSIGNMENT_statement . COMMA variablesDeclare  (141)
	variablesDeclare : ASSIGNMENT_statement .  (143)

	COMMA  shift 149
	SEMICOLON  reduce 143


state 90
	StringDeclare : str_ASSIGNMENT_statement . COMMA StringDeclare  (137)
	StringDeclare : str_ASSIGNMENT_statement .  (139)

	COMMA  shift 150
	SEMICOLON  reduce 139


state 91
	variable_declare_statements : varType StringDeclare .  (145)

	.  reduce 145


state 92
	variable_declare_statements : varType variablesDeclare .  (144)

	.  reduce 144


state 93
	ASSIGNMENT_statement : id ASSIGNMENT . expr  (126)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 151
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 94
	procCall : id LEFTPAREN . args RIGHTPAREN  (82)
	procCall : id LEFTPAREN . RIGHTPAREN  (83)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	RIGHTPAREN  shift 152
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 153
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133
	args  goto 154
	argsDeclare  goto 155


state 95
	ASSIGNMENT_statement : derefID ASSIGNMENT . expr  (127)

	ID  shift 24
	BOOLTRUE  shift 104
	BOOLFALSE  shift 105
	CSNULL  shift 106
	INTEGER_POS  shift 107
	INTEGER_NEG  shift 108
	CHAR_CONST  shift 109
	STRING_CONST  shift 110
	HEX_CONST  shift 111
	OCTAL_CONST  shift 112
	BINARY_CONST  shift 113
	NOT  shift 114
	ADDRESS  shift 115
	DEREFERENCE  shift 51
	ABSOLUTE  shift 116
	LEFTPAREN  shift 117
	.  error

	id  goto 118
	operator  goto 119
	Pexpr  goto 120
	address  goto 121
	derefID  goto 122
	consts  goto 123
	compBoolExpr  goto 124
	expr  goto 156
	numbers  goto 126
	booleans  goto 127
	csnull  goto 128
	strings  goto 129
	chars  goto 130
	procCall  goto 131
	absolute  goto 132
	stringArray  goto 133


state 96
	block_return_void_statements : LEFTBRACE newline RETURN . SEMICOLON rightbrace  (54)

	SEMICOLON  shift 157
	.  error


state 97
	block_return_void_statements : LEFTBRACE newline rightbrace .  (55)

	.  reduce 55


state 98
	statement : procCall SEMICOLON .  (103)

	.  reduce 103


state 99
	newline : declarations newline .  (91)

	.  reduce 91


state 100
	declarations : variable_declare_statements SEMICOLON .  (95)

	.  reduce 95


state 101
	statements : statement statements .  (96)

	.  reduce 96


state 102
	statements : block_statements statements .  (98)

	.  reduce 98


state 103
	statement : ASSIGNMENT_statement SEMICOLON .  (104)

	.  reduce 104


state 104
	booleans : BOOLTRUE .  (78)
